# ceinmsrt-core-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ReadMeMatlab.txt  ReadMeSimulink.txt  bitbucket-pipelines.yml
Matlab/: Bspline.cpp  (+8 more)
lib/Calibration/: CMakeLists.txt  SimulatedAnnealing.cpp  SimulatedAnnealing.h  SimulatedAnnealingSpan.cpp  SimulatedAnnealingSpan.h  SimulatedAnnealingSpan_parallel.cpp  SimulatedAnnealingSpan_parallel.h  SyncToolsCal.cpp  SyncToolsCal.h  TorquesComputation.cpp  TorquesComputation.h  TorquesComputationRT.cpp  TorquesComputationRT.h  TrialData.cpp  TrialData.h  parameters.h  random-gen.cpp  random-gen.h
lib/Calibration/ObjectiveFunctions/: SumMinObjectiveFunction_singleF.cpp  SumMinObjectiveFunction_singleF.h
lib/Calibration/SimAnnealParameters/: GroupedStrengthCoefficients_IndividualLstLom.cpp  GroupedStrengthCoefficients_IndividualLstLom.h  ShapeFactor.cpp  ShapeFactor.h  StrengthCoefficients_ShapeFactor_C1_C2_TendonSlackLength_single.cpp  StrengthCoefficients_ShapeFactor_C1_C2_TendonSlackLength_single.h  StrengthCoefficients_ShapeFactor_TendonSlackLength_single.cpp  StrengthCoefficients_ShapeFactor_TendonSlackLength_single.h  StrengthCoefficients_ShapeFactor_TendonSlackLength_single_widerRange.cpp  StrengthCoefficients_ShapeFactor_TendonSlackLength_single_widerRange.h  StrengthCoefficients_Single_ShapeFactor_C1_C2_TendonSlackLength_use_last_Dof_only.cpp  StrengthCoefficients_Single_ShapeFactor_C1_C2_TendonSlackLength_use_last_Dof_only.h
lib/Calibration/TorqueComputationModes/: ComputationMode_Default.cpp  ComputationMode_Default.h  ComputationMode_Fast.cpp  ComputationMode_Fast.h
lib/Gui/: CMakeLists.txt  CalManager.cpp  CalManager.h  QCustomPlotMI.cpp  QCustomPlotMI.h  mainwindow.cpp  mainwindow.h  mainwindowCal.cpp  mainwindowCal.h  mainwindowViz.cpp  mainwindowViz.h  mainwindowViz2File.cpp  mainwindowViz2File.h  myGLWidget.cpp  myGLWidget.h
lib/Gui/opengl/: DrawingUtility.h  Mesh.cpp  Mesh.h  RenderedMesh.cpp  RenderedMesh.h
lib/MTUSpline/: CMakeLists.txt  MTUSplineData.h  MTUSplineDataRead.cpp  MTUSplineDataRead.h  MTUSplineDataWrite.cpp  MTUSplineInterface.cpp  MTUSplineInterface.h  MuscleAnalyseForSpline.cpp  MuscleAnalyseForSpline.h  MuscleAnalyseForSpline_MPI.cpp  MuscleAnalyseForSpline_MPI.h  splineCoeffComputation.cpp
lib/ModelEvaluation/: CMakeLists.txt  ModelEvaluation.cpp  ModelEvaluation.h  ModelEvaluationBase.cpp  ModelEvaluationBase.h  ModelEvaluationHybrid.cpp  ModelEvaluationHybrid.h  ModelEvaluationOffline.cpp  ModelEvaluationOffline.h  ModelEvaluationOnline.cpp  ModelEvaluationOnline.h  ModelEvaluationRealTime.cpp  ModelEvaluationRealTime.h  ModelInterface.cpp  ModelInterface.h  ModelInterfaceSwig.i  OpenSimFileLogger.cpp  OpenSimFileLogger.h  OpenSimFileLoggerRPI.cpp  SimpleFileLogger.h
lib/MuscleTendonScaling/: CMakeLists.txt  ComputeMuscleLength.cpp  ComputeMuscleLength.h  ComputeMuscleTendonLength.cpp  ComputeMuscleTendonLength.h  ComputePostureControlPoints.cpp  ComputePostureControlPoints.h  ComputeTSLAndOFL.cpp  ComputeTSLAndOFL.h  MuscleTendonScaling.cpp  MuscleTendonScaling.h  OptimalFiberLengthOptimizer.cpp  OptimalFiberLengthOptimizer.h  TSLAndOFLOptimizer.cpp  TSLAndOFLOptimizer.h
lib/NMSmodel/: CMakeLists.txt  DoF.cpp  DoF.h  MTU.cpp  MTU.h  MuscleParameters.cpp  MuscleParameters.h  NMSmodel.cpp  NMSmodel.h  NMSmodelPolicyTemplates.h  SetupDataStructure.cpp  SetupDataStructure.h
lib/NMSmodel/Activation/: ExponentialActivation.cpp  ExponentialActivation.h  ExponentialActivationRT.cpp  ExponentialActivationRT.h  PiecewiseActivation.cpp  PiecewiseActivation.h
lib/NMSmodel/Tendon/: ElasticTendon.cpp  ElasticTendon.h  ElasticTendon_BiSec.cpp  ElasticTendon_BiSec.h  StiffTendon.cpp  StiffTendon.h
lib/Producers/: AngleFromX.cpp  AngleFromX.h  CMakeLists.txt  DataSynchronizer.h  EMGFromX.cpp  EMGFromX.h  EMGPreProcessing.cpp  EMGPreProcessing.h  ExternalTorqueFromX.cpp  ExternalTorqueFromX.h  Filter.cpp  Filter.h  LmtMaFromX.cpp  LmtMaFromX.h  Semaphore.cpp  Semaphore.h  SyncTools.cpp  SyncTools.h
lib/Producers/DevicePlugin/: Angle0plugin.cpp  Angle0plugin.h  AngleAndComsumer0.cpp  AngleAndComsumer0.h  AngleAndIDFileplugin.cpp  AngleAndIDFileplugin.h  AngleFileplugin.cpp  AngleFileplugin.h  EMG0plugin.cpp  EMG0plugin.h  EMG1plugin.cpp  EMG1plugin.h  EMGFileplugin.cpp  EMGFileplugin.h  EMGFilepluginFilt.cpp  EMGFilepluginFilt.h
lib/Producers/DevicePlugin/AACFromFilePlugin/: AACFromFilePlugin.cpp  AACFromFilePlugin.hpp  CMakeLists.txt
lib/Producers/DevicePlugin/EACFromFilePlugin/: CMakeLists.txt  EACFromFilePlugin.cpp  EACFromFilePlugin.hpp
lib/Producers/FromExtDevice/: AngleFromDevice.cpp  AngleFromDevice.h  DynLib.cpp  DynLib.h  DynLibOptimization.cpp  DynLibOptimization.h  EMGFromDevice.cpp  EMGFromDevice.h  LmtMaFromMTUSpline.cpp  LmtMaFromMTUSpline.h
lib/Producers/FromFile/: EMGFromFile.cpp  EMGFromFile.h  ExternalTorqueFromFile.cpp  ExternalTorqueFromFile.h  LmtMaFromFile.cpp  LmtMaFromFile.h
lib/xmlInput/: CMakeLists.txt  ExecutionEmgXml.cpp  ExecutionEmgXml.h  ExecutionOptimizationXmlReader.cpp  ExecutionOptimizationXmlReader.h  ExecutionSimulatedAnnealing.cpp  ExecutionSimulatedAnnealing.h  ExecutionXmlReader.cpp  ExecutionXmlReader.h  NMSmodelConfig.h  XMLInterpreter.cpp  XMLInterpreter.h  executionRT.cpp
plugin/: CMakeLists.txt
src/: CEINMS.cpp  CMakeLists.txt  Calibrate.cpp  Calibrate_MPI.cpp  Calibrate_mpi_parallel.cpp  FileVisualizer.cpp  FileVisualizer2File.cpp  MTU_Computation_MPI.cpp  MuscleTendonScaling.cpp  getTime.h  testCylinders.cpp
tests/: CMakeLists.txt  masterTestSuite.cpp
tests/coreTests/: cmake_install.cmake
tests/coreTests/bSpline/: BsplineTest.cpp  CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/compareFiles/: CMakeLists.txt  compareFiles.cpp  compareFiles.hpp
tests/lib/correlation/: CMakeLists.txt  correlation.cpp  correlation.hpp
tests/lib/mapFromFile/: CMakeLists.txt  mapFromFile.cpp  mapFromFile.hpp
tests/lib/resampleData/: CMakeLists.txt  resample.cpp  resample.hpp
tests/pluginInterfaceTests/v1/: CMakeLists.txt
(+87 files in other folders)
